--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,132 @@
 
 @layer base {
   :root {
+    --logo: #ec1639;
+    --anchor: #2d69c6;
+    --anchor-hover: #285eb1;
+    --anchor-visited: #609;
+    --anchor-secondary: #4d618a;
+    --anchor-dark: #1a3d73;
+    --section-separator: #dbdbdb;
+    --separator: #dde2e6;
+    --separator-light: #e9e7ef;
+    --text-base: #111;
+    --text-muted: #a1a1a1;
+    --header-bg: #fff;
+    --header-icon: #666;
+    --header-color: #666;
+    --header-border: #dde2e6;
+    --header-shadow: #dde2e6;
+    --header-form-bg: #f5f7f8;
+    --header-form-border: #dbdbdb;
+    --header-form-color: #555;
+    --header-form-icon-fill: #ec1639;
+    --header-form-icon-hover-bg: #ec1639;
+    --header-form-icon-hover-fill: #fff;
+    --header-form-hover-bg: #fff;
+    --header-autocomplete-bg: #fff;
+    --header-autocomplete-border: #f1f0f5;
+    --header-autocomplete-color: #111;
+    --header-autocomplete-visited-color: #609;
+    --header-autocomplete-hover-bg: #f1f0f5;
+    --header-autocomplete-arrow-bg: #f6f6f6;
+    --header-autocomplete-arrow: #767676;
+    --body-bg: #f8fbfb;
+    --body-color: #111;
+    --body-color-mid: #3e3e3e;
+    --body-color-light: #555;
+    --body-color-lighter: #666;
+    --body-color-lightest: #666;
+    --footer-bg: #edf1f2;
+    --footer-border: #dde2e6;
+    --button-secondary-bg: #f1f0f5;
+    --button-secondary-border: #c3c4c7;
+    --button-secondary-hover-border: #767676;
+    --button-secondary-color: #111;
+    --button-secondary-hover-bg: #f7fafc;
+    --button-brand-bg: #ec1639;
+    --button-brand-color: #fff;
+    --button-brand-hover-bg: #d41433;
+    --button-brand-hover-color: #fff;
+    --button-brand-border-color: #ec1639;
+    --button-outline-border: #dbdbdb;
+    --button-outline-color: #444;
+    --button-outline-hover-bg: #f5f7f8;
+    --button-outline-hover-border: #c3c4c7;
+    --input-bg: #fff;
+    --input-border: #c3c4c7;
+    --input-color: #111;
+    --input-hover-bg: #fff;
+    --input-hover-border: #a1a1a1;
+    --input-disabled-bg: #eee;
+    --input-disabled-color: #a1a1a1;
+    --input-radio-color: red;
+    --input-radio-bg: #fff;
+    --select-bg: #f3f3f3;
+    --select-outline-bg: #fff;
+    --select-border: #c3c4c7;
+    --select-color: #111;
+    --select-hover-bg: #e6e6e6;
+    --card-bg: #fff;
+    --card-dark-bg: #fff;
+    --card-light-bg: #f5f7f8;
+    --card-hover-bg: #fff;
+    --card-border: #f1f0f5;
+    --card-border-solid: #dbdbdb;
+    --card-hover-border: #dbdbdb;
+    --card-title: #111;
+    --card-subtext: #555;
+    --card-text: #546076;
+    --accordion-bg: transparent;
+    --accordion-bg-open: #fff;
+    --accordion-text: #697482;
+    --accordion-border: #c3c4c7;
+    --filter-selectors-bg: #fff;
+    --filter-selectors-border: #c3c4c7;
+    --drop-color: #792f30;
+    --popup-bg: #fff;
+    --popup-color: #111;
+    --popup-separator: #f1f0f5;
+    --popup-item-text-hover: #fff;
+    --popup-item-bg-hover: #3d74d4;
+    --table-item-hover-bg: #fbfbfc;
+    --table-item-hover-text: #000;
+    --table-body-bg: #fff;
+    --table-header-bg: #dbdbdb;
+    --notification-card-bg: #fff;
+    --notification-card-bg-new: #fffede;
+    --notification-card-border: #f3f3f3;
+    --notification-card-hover-bg: #f6f6f6;
+    --notification-card-title: #3e3e3e;
+    --notification-card-subtext: #c3c4c7;
+    --notification-footer-bg: #f3f3f3;
+    --shadow-dark: #fff;
+    --tab-text: #111;
+    --tab-text-selected: #fff;
+    --warning-bg: #fffede;
+    --warning-text: #111;
+    --alert-bg: #fbe9e7;
+    --alert-text: #d50000;
+    --border-badge-blue: #fff;
+    --border-list-bottom: #f1f0f5;
+    --border-dark: #ddd;
+    --border-light: #ddd;
+    --border-default: #dbdbdb;
+    --tag-color: #555;
+    --tag-bg: #f3f3f3;
+    --tag-bg-hover: #c3c4c7;
+    --tag-border: #ddd;
+    --tag-border-hover: #ddd;
+    --scrollbar-track-bg: transparent;
+    --scrollbar-thumb-bg: #c3c4c7;
+    --scrollbar-thumb-bg-hover: #666;
+    --pill-color: #444;
+    --pill-bg: #dde2e6;
+    --pill-glossary-terms-color: #2d69c6;
+    --pill-glossary-terms-bg: #f3f3f3;
+    --star-rating-color: #dcdde0
+
+    
     --background: 0 0% 100%;
     --foreground: 0 0% 11.37%;
 
@@ -36,6 +162,132 @@
   }
 
   .dark {
+    --logo: #fff;
+    --anchor: #dbdbdb;
+    --anchor-hover: #fff;
+    --anchor-visited: #dbdbdb;
+    --anchor-secondary: #c3c4c7;
+    --anchor-dark: #dbdbdb;
+    --section-separator: #dbdbdb;
+    --separator: #444;
+    --separator-light: #444;
+    --text-base: #fff;
+    --text-muted: #546076;
+    --header-bg: #161616;
+    --header-icon: #fff;
+    --header-color: #fff;
+    --header-border: transparent;
+    --header-shadow: transparent;
+    --header-form-bg: #26282c;
+    --header-form-border: #dde2e6;
+    --header-form-color: #dde2e6;
+    --header-form-icon-fill: #fff;
+    --header-form-icon-hover-bg: #ec1639;
+    --header-form-icon-hover-fill: #fff;
+    --header-form-hover-bg: #23272b;
+    --header-autocomplete-bg: #26282c;
+    --header-autocomplete-border: #26282c;
+    --header-autocomplete-color: #c3c4c7;
+    --header-autocomplete-visited-color: #dde2e6;
+    --header-autocomplete-hover-bg: #363e44;
+    --header-autocomplete-arrow-bg: #2c3035;
+    --header-autocomplete-arrow: #fff;
+    --body-bg: #1d1d1d;
+    --body-color: #dde2e6;
+    --body-color-mid: #f1f0f5;
+    --body-color-light: #dbdbdb;
+    --body-color-lighter: #c3c4c7;
+    --body-color-lightest: #a1a1a1;
+    --footer-bg: #161616;
+    --footer-border: #1d1d1d;
+    --button-secondary-bg: #363e44;
+    --button-secondary-border: #444;
+    --button-secondary-hover-border: #666;
+    --button-secondary-color: #dde2e6;
+    --button-secondary-hover-bg: #546076;
+    --button-brand-bg: #ec1639;
+    --button-brand-color: #fff;
+    --button-brand-hover-bg: #d41433;
+    --button-brand-hover-color: #fff;
+    --button-brand-border-color: #ec1639;
+    --button-outline-border: #444;
+    --button-outline-color: #dde2e6;
+    --button-outline-hover-bg: transparent;
+    --button-outline-hover-border: $palette-gray-blue-600;
+    --input-bg: #111;
+    --input-border: #546076;
+    --input-color: #dde2e6;
+    --input-hover-bg: #23272b;
+    --input-hover-border: #9ea7b1;
+    --input-disabled-bg: #2c3035;
+    --input-disabled-color: #546076;
+    --input-radio-color: red;
+    --input-radio-bg: $palette-gray-;
+    --select-bg: #23272b;
+    --select-outline-bg: #23272b;
+    --select-border: #363e44;
+    --select-color: #dde2e6;
+    --select-hover-bg: #363e44;
+    --card-bg: #26282c;
+    --card-dark-bg: #161616;
+    --card-light-bg: #2c3035;
+    --card-hover-bg: #363e44;
+    --card-border: transparent;
+    --card-border-solid: transparent;
+    --card-hover-border: #444;
+    --card-title: #dde2e6;
+    --card-subtext: #a1a1a1;
+    --card-text: #c3c4c7;
+    --accordion-bg: #26282c;
+    --accordion-bg-open: #444;
+    --accordion-text: #c3c4c7;
+    --accordion-border: #363e44;
+    --filter-selectors-bg: #1d1d1d;
+    --filter-selectors-border: #546076;
+    --drop-color: #fad49e;
+    --popup-bg: #26282c;
+    --popup-color: #dde2e6;
+    --popup-separator: #666;
+    --popup-item-text-hover: #dde2e6;
+    --popup-item-bg-hover: #3d74d4;
+    --table-item-hover-bg: #2c3035;
+    --table-item-hover-text: #fff;
+    --table-body-bg: #26282c;
+    --table-header-bg: #26282c;
+    --notification-card-bg: #26282c;
+    --notification-card-bg-new: #363e44;
+    --notification-card-border: transparent;
+    --notification-card-hover-bg: #363e44;
+    --notification-card-title: #fff;
+    --notification-card-subtext: #161616;
+    --notification-footer-bg: #161616;
+    --shadow-dark: #dde2e6;
+    --tab-text: #dde2e6;
+    --tab-text-selected: #dde2e6;
+    --warning-bg: #444;
+    --warning-text: #fff;
+    --alert-bg: #111;
+    --alert-text: #f3f3f3;
+    --border-badge-blue: #2c3035;
+    --border-list-bottom: transparent;
+    --border-dark: transparent;
+    --border-light: #546076;
+    --border-default: #363e44;
+    --tag-color: #dbdbdb;
+    --tag-bg: transparent;
+    --tag-bg-hover: #363e44;
+    --tag-border: #363e44;
+    --tag-border-hover: #363e44;
+    --scrollbar-track-bg: transparent;
+    --scrollbar-thumb-bg: #444;
+    --scrollbar-thumb-bg-hover: #666;
+    --pill-color: #111;
+    --pill-bg: #758190;
+    --pill-glossary-terms-color: #dbdbdb;
+    --pill-glossary-terms-bg: transparent;
+    --star-rating-color: #666
+    
+    
     --background: 0 0% 11.37%;
     --foreground: 210 40% 98%;
 
