--- a/src/index.css
+++ b/src/index.css
@@ -316,6 +316,26 @@
     --input: 217.2 32.6% 17.5%;
     --ring: 212.7 26.8% 83.9%;
   }
+
+  .helpful p {
+    display: block;
+    font-size: .95rem;
+    margin-right: .5rem!important
+}
+
+.helpful p.thanks {
+    color: green
+}
+
+.helpful p.thanks svg {
+    margin-right: .6rem
+}
+
+@media only screen and (min-width: 48em) {
+    .helpful p {
+        display:inline-block
+    }
+}
 }
 
 @layer base {
