--- a/src/index.css
+++ b/src/index.css
@@ -34703,6 +34703,539 @@ html.supports-grid .top-brands__brands .box-wrapper {
     margin-right: .6rem
 }
 
+[data-scroll][data-scroll] {
+    display: flex;
+    flex-wrap: nowrap!important;
+    max-width: 100%!important;
+    min-width: 0;
+    overflow: hidden!important;
+    width: 100%
+}
+
+html.touch [data-scroll][data-scroll] {
+    overflow-x: scroll!important;
+    overflow-y: hidden;
+    -ms-overflow-style: none;
+    -moz-scrollbars: none;
+    scrollbar-width: none
+}
+
+html.touch [data-scroll][data-scroll]::-webkit-scrollbar {
+    background: 0 0;
+    display: none!important;
+    height: 0!important;
+    opacity: 0;
+    width: 0!important
+}
+
+html.touch [data-scroll][data-scroll]::-webkit-scrollbar-track {
+    display: none;
+    height: 0;
+    overflow: hidden
+}
+
+html.touch [data-scroll][data-scroll]::-webkit-scrollbar-thumb {
+    background: 0 0;
+    display: none;
+    height: 0;
+    overflow: hidden;
+    width: 0
+}
+
+.scroll__arrow {
+    align-items: center;
+    -webkit-appearance: none;
+    appearance: none;
+    background: var(--colors-themed-46865032);
+    border: 0;
+    border-radius: 100%;
+    box-shadow: 0 .4px 2.2px rgba(0,0,0,.02),0 .9px 5.3px rgba(0,0,0,.028),0 1.8px 10px rgba(0,0,0,.035),0 3.1px 17.9px rgba(0,0,0,.042),0 5.8px 33.4px rgba(0,0,0,.05),0 14px 80px rgba(0,0,0,.07);
+    color: var(--colors-themed-28462496);
+    display: flex;
+    height: 46px;
+    justify-content: center;
+    left: 0;
+    margin: -23px 0 0;
+    opacity: .92;
+    outline: 0;
+    position: absolute;
+    top: 50%;
+    transition: opacity .35s ease-in-out,transform 50ms ease-in-out;
+    -webkit-user-select: none;
+    user-select: none;
+    width: 46px;
+    z-index: 9999999
+}
+
+:root {
+    --colors-themed-46865032: #fff
+}
+
+[data-theme=dark] {
+    --colors-themed-46865032: #363e44
+}
+
+:root {
+    --colors-themed-28462496: #111
+}
+
+[data-theme=dark] {
+    --colors-themed-28462496: #fff
+}
+
+.scroll__arrow--next {
+    left: auto;
+    right: 0
+}
+
+.scroll__arrow:active {
+    transform: scale(.92)
+}
+
+.scroll__arrow--disabled {
+    box-shadow: none;
+    color: var(--colors-themed-body-color-light);
+    cursor: default!important;
+    opacity: 0!important;
+    pointer-events: none!important
+}
+
+.scroll__arrow svg {
+    flex: none;
+    pointer-events: none
+}
+
+.scroll__arrow.scroll__arrow--disabled.scroll__arrow--previous {
+    pointer-events: none!important
+}
+
+.scroll__arrow.scroll__arrow--disabled.scroll__arrow--previous * {
+    pointer-events: none
+}
+
+.scroll--small .scroll__arrow {
+    height: 36px;
+    left: -12px;
+    margin-top: -18px;
+    width: 36px
+}
+
+.scroll--small .scroll__arrow--next {
+    left: auto;
+    right: -12px
+}
+
+.scroll--red .scroll__arrow {
+    color: #de6845
+}
+
+html.no-touch .scroll__arrow:not(:disabled):hover {
+    opacity: 1
+}
+
+.scroll__arrow g {
+    display: contents
+}
+
+@supports (animation-fill-mode: forwards) {
+    .scroll__arrow {
+        animation:arrow-enter .2s ease-in-out 0s forwards;
+        transform: scale(.8);
+        z-index: 99
+    }
+
+    .scroll__arrow svg {
+        animation: arrow-enter-icon .2s ease-in-out .1s forwards;
+        opacity: 0
+    }
+}
+
+@keyframes arrow-enter {
+    to {
+        transform: none
+    }
+}
+
+@keyframes arrow-enter-icon {
+    0 {
+        opacity: 0
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+.scroll.scroll--center .scroll__content {
+    flex: none!important;
+    min-width: 100%
+}
+
+.scroll.scroll--center .scroll__clip {
+    margin-left: auto!important;
+    margin-right: auto!important
+}
+
+@media only screen and (max-width: 47.99em) {
+    .scroll.scroll--center-on-mobile .scroll__content {
+        flex:none!important;
+        justify-content: center!important
+    }
+
+    .scroll.scroll--center-on-mobile .scroll__clip,.scroll.scroll--center-on-mobile .scroll__content {
+        margin-left: auto!important;
+        margin-right: auto!important
+    }
+}
+
+@supports not (display: grid) {
+    .scroll.scroll--center .scroll__content {
+        justify-content:center!important;
+        margin-left: auto!important;
+        margin-right: auto!important
+    }
+
+    .scroll.scroll--center-on-mobile .scroll__content {
+        justify-content: center!important
+    }
+
+    [data-scroll][data-scroll-center] {
+        justify-content: center
+    }
+
+    @media only screen and (max-width: 47.99em) {
+        [data-scroll][data-scroll-centeronmobile] {
+            justify-content:center
+        }
+    }
+}
+
+@supports (display: grid) {
+    .scroll.scroll--center .scroll__scroller,[data-scroll][data-scroll-center] {
+        display:grid!important;
+        grid-auto-flow: column;
+        justify-content: safe center
+    }
+
+    .scroll.scroll--center .scroll__content {
+        min-width: auto
+    }
+
+    @media only screen and (max-width: 47.99em) {
+        .scroll.scroll--center-on-mobile .scroll__scroller,[data-scroll][data-scroll-centeronmobile] {
+            display:grid!important;
+            grid-auto-flow: column;
+            justify-content: safe center
+        }
+    }
+}
+
+.touch .scroll__child,.touch .scroll__content>a,.touch .scroll__content>div,.touch .scroll__content>li {
+    scroll-snap-align: start
+}
+
+.scroll__child:first-child,.scroll__content>a:first-child,.scroll__content>div:first-child,.scroll__content>li:first-child {
+    margin-left: 0
+}
+
+.scroll__child:first-last,.scroll__content>a:first-last,.scroll__content>div:first-last,.scroll__content>li:first-last {
+    margin-left: 0
+}
+
+.scroll__child:only-child,.scroll__content>a:only-child,.scroll__content>div:only-child,.scroll__content>li:only-child {
+    scroll-snap-align: none!important
+}
+
+.scroll.scroll--scrolling .scroll__scroller {
+    scroll-snap-type: none
+}
+
+.scroll.scroll--scrolling .scroll__scroller .scroll__child {
+    scroll__snap-align: none
+}
+
+.scroll {
+    display: flex;
+    min-width: 0;
+    position: relative
+}
+
+.scroll--pending,.scroll--pending * {
+    display: contents
+}
+
+.scroll__clip {
+    display: flex;
+    overflow: hidden
+}
+
+.scroll,.scroll__clip,.scroll__scroller {
+    width: 100%
+}
+
+.scroll__scroller {
+    display: flex;
+    overflow: hidden;
+    overflow-x: auto;
+    overflow-x: overlay;
+    -webkit-overflow-scrolling: touch;
+    flex: 1 1;
+    margin-bottom: -100px;
+    padding-bottom: 100px;
+    scroll-snap-type: x proximity;
+    -ms-overflow-style: none;
+    -moz-scrollbars: none
+}
+
+.scroll__scroller::-webkit-scrollbar {
+    background: 0 0;
+    display: none!important;
+    height: 0!important;
+    opacity: 0!important;
+    width: 0!important
+}
+
+.scroll__scroller::-webkit-scrollbar-track {
+    display: none;
+    height: 0!important;
+    overflow: hidden
+}
+
+.scroll__scroller::-webkit-scrollbar-thumb {
+    background: 0 0;
+    display: none!important;
+    height: 0!important;
+    overflow: hidden;
+    width: 0!important
+}
+
+@supports (scrollbar-width:thin) {
+    .scroll__scroller {
+        scrollbar-width: none!important
+    }
+}
+
+.scroll.scroll--no-scrolling .scroll,.scroll.scroll--no-scrolling .scroll__clip,.scroll.scroll--no-scrolling .scroll__scroller {
+    overflow: visible
+}
+
+.scroll.scroll--no-scrolling .scroll__scroller {
+    margin-bottom: 0;
+    padding-bottom: 0
+}
+
+.scroll.scroll--no-scroll .scroll__scroller {
+    overflow: hidden
+}
+
+.scroll__content {
+    display: flex;
+    flex-grow: 1;
+    flex-wrap: nowrap!important;
+    max-width: 100%;
+    overflow: initial!important
+}
+
+.h-content__posts {
+    display: flex;
+    width: 100%
+}
+
+.h-content__post {
+    background: #fff;
+    border: 1px solid #eaeaea;
+    border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0,0,0,.02);
+    color: inherit;
+    flex: none;
+    margin-right: 1rem;
+    padding: 0!important;
+    position: relative;
+    text-decoration: none;
+    text-decoration: none!important;
+    transition: all .25s ease-in-out;
+    transition-property: border,box-shadow;
+    width: calc(58.82353% - .41176rem)
+}
+
+[data-theme=dark] .h-content__post {
+    background: #26282c;
+    border: 0;
+    box-shadow: inset 0 0 0 1px #26282c;
+    transition: all .18s ease-in-out
+}
+
+.h-content__post[href] {
+    color: inherit
+}
+
+@media (hover: hover) {
+    .h-content__post[href]:hover {
+        border-color:#c3c4c7;
+        text-decoration: none
+    }
+
+    [data-theme=dark] .h-content__post[href]:hover {
+        border: 0;
+        border-color: transparent;
+        box-shadow: inset 0 0 0 1px #444
+    }
+}
+
+.h-content__post:last-child {
+    margin-right: 0
+}
+
+@media only screen and (min-width: 20em) {
+    .h-content__post {
+        flex:none;
+        margin-right: 1rem;
+        padding: 0!important;
+        width: calc(55.55556% - .44444rem)
+    }
+
+    .h-content__post:last-child {
+        margin-right: 0
+    }
+}
+
+@media only screen and (min-width: 23em) {
+    .h-content__post {
+        flex:none;
+        margin-right: 1rem;
+        padding: 0!important;
+        width: calc(52.63158% - .47368rem)
+    }
+
+    .h-content__post:last-child {
+        margin-right: 0
+    }
+}
+
+@media only screen and (min-width: 25.8em) {
+    .h-content__post {
+        flex:none;
+        margin-right: 1rem;
+        padding: 0!important;
+        width: calc(44.44444% - .55556rem)
+    }
+
+    .h-content__post:last-child {
+        margin-right: 0
+    }
+}
+
+@media only screen and (min-width: 35.5em) {
+    .h-content__post {
+        flex:none;
+        margin-right: 1rem;
+        padding: 0!important;
+        width: calc(35.71429% - .64286rem)
+    }
+
+    .h-content__post:last-child {
+        margin-right: 0
+    }
+}
+
+@media only screen and (min-width: 48em) {
+    .h-content__post {
+        flex:none;
+        margin-right: 1rem;
+        padding: 0!important;
+        width: calc(31.25% - .6875rem)
+    }
+
+    .h-content__post:last-child {
+        margin-right: 0
+    }
+}
+
+@media only screen and (min-width: 64em) {
+    .h-content__post {
+        flex:none;
+        margin-right: 1rem;
+        padding: 0!important;
+        width: calc(23.80952% - .7619rem)
+    }
+
+    .h-content__post:last-child {
+        margin-right: 0
+    }
+}
+
+@media only screen and (min-width: 80em) {
+    .h-content__post {
+        flex:none;
+        margin-right: 1rem;
+        padding: 0!important;
+        width: calc(16.66667% - .83333rem)
+    }
+
+    .h-content__post:last-child {
+        margin-right: 0
+    }
+}
+
+@media only screen and (min-width: 120em) {
+    .h-content__post {
+        flex:none;
+        margin-right: 1.5rem;
+        padding: 0!important;
+        width: calc(16.66667% - 1.25rem)
+    }
+
+    .h-content__post:last-child {
+        margin-right: 0
+    }
+}
+
+.h-content__cover, .h-content__cover img {
+    background-position: 50%;
+    background-size: cover;
+    border-radius: 6px 6px 0 0;
+    height: 10rem;
+    left: -1px;
+    position: relative;
+    top: -1px;
+    width: 100%;
+    width: calc(100% + 2px)
+}
+
+.h-content__meta {
+    padding: 1.5rem
+}
+
+.h-content__meta h4 {
+    font-weight: 400;
+    line-height: 1.3;
+    margin: 0
+}
+
+.h-content__badge {
+    background: #fff;
+    border-radius: 4px;
+    color: #555;
+    font-size: .85rem;
+    font-variant-numeric: tabular-nums;
+    left: 10px;
+    padding: .4rem .5rem;
+    position: absolute;
+    top: 10px;
+    -webkit-user-select: none;
+    user-select: none;
+    z-index: 2
+}
+
+.h-content__title {
+    display: -webkit-box;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    word-break: break-word;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical
+}
+
 @media only screen and (min-width: 48em) {
     .helpful p {
         display:inline-block
