--- a/src/index.css
+++ b/src/index.css
@@ -34771,7 +34771,7 @@ html.touch [data-scroll][data-scroll]::-webkit-scrollbar-thumb {
     --colors-themed-46865032: #fff
 }
 
-[data-theme=dark] {
+.dark {
     --colors-themed-46865032: #363e44
 }
 
@@ -34779,7 +34779,7 @@ html.touch [data-scroll][data-scroll]::-webkit-scrollbar-thumb {
     --colors-themed-28462496: #111
 }
 
-[data-theme=dark] {
+.dark {
     --colors-themed-28462496: #fff
 }
 
@@ -35058,7 +35058,7 @@ html.no-touch .scroll__arrow:not(:disabled):hover {
     width: calc(58.82353% - .41176rem)
 }
 
-[data-theme=dark] .h-content__post {
+.dark .h-content__post {
     background: #26282c;
     border: 0;
     box-shadow: inset 0 0 0 1px #26282c;
@@ -35075,7 +35075,7 @@ html.no-touch .scroll__arrow:not(:disabled):hover {
         text-decoration: none
     }
 
-    [data-theme=dark] .h-content__post[href]:hover {
+    .dark .h-content__post[href]:hover {
         border: 0;
         border-color: transparent;
         box-shadow: inset 0 0 0 1px #444
