--- a/src/index.css
+++ b/src/index.css
@@ -35337,6 +35337,30 @@ html.no-touch .scroll__arrow:not(:disabled):hover {
     }
 }
 
+.DoZFzTt6KaqcW2C3gw2t .vY_GAVOV_4RJVMS2Jnwa {
+    background-color: rgb(83, 121, 89)
+}
+
+.DoZFzTt6KaqcW2C3gw2t .p9jwLTCU71n4bBVTVAMW {
+    color: rgb(83, 121, 89)
+}
+
+.DoZFzTt6KaqcW2C3gw2t .vY_GAVOV_4RJVMS2Jnwa {
+    background-color: rgb(120, 6, 70)
+}
+
+.DoZFzTt6KaqcW2C3gw2t .p9jwLTCU71n4bBVTVAMW {
+    color: rgb(120, 6, 70)
+}
+
+.DoZFzTt6KaqcW2C3gw2t .vY_GAVOV_4RJVMS2Jnwa {
+    background-color: rgb(15, 98, 132)
+}
+
+.DoZFzTt6KaqcW2C3gw2t .p9jwLTCU71n4bBVTVAMW {
+    color: rgb(15, 98, 132)
+}
+
 .p9jwLTCU71n4bBVTVAMW {
     background: #fff;
     border-radius: 30px;
