--- a/src/index.css
+++ b/src/index.css
@@ -35091,7 +35091,7 @@ html.supports-grid .top-brands__brands .box-wrapper {
     opacity: .7
 }
 
-.eJJfcJGMERkC8cUwtBAQ {
+.eJJfcJGMERkC8cUwtBAQ, .eJJfcJGMERkC8cUwtBAQ img {
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
