--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,203 @@
 
 
 
+
+.sitemap-mobile__theme {
+    align-items: center;
+    background-color: var(--colors-themed-header-bg);
+    border-top: 1px solid var(--colors-themed-separator);
+    bottom: 0;
+    display: flex;
+    margin-top: auto;
+    position: sticky;
+    touch-action: none
+}
+
+.sitemap-mobile__theme .icon {
+    margin-right: .5rem
+}
+
+.sitemap-mobile__links.sitemap-mobile__links--corp {
+    padding-bottom: 0;
+    padding-top: 0;
+    touch-action: none
+}
+
+.sitemap-mobile__view {
+    display: flex;
+    flex: 1 1;
+    max-width: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    position: relative;
+    white-space: nowrap;
+    width: 100%
+}
+
+.sitemap-mobile__view-slide {
+    display: flex;
+    flex: 1 1;
+    flex-direction: column;
+    width: 100%
+}
+
+.sitemap-mobile__backdrop {
+    background: rgba(0,0,0,.25);
+    bottom: 0;
+    left: 0;
+    position: fixed;
+    right: 0;
+    top: 0;
+    -webkit-user-select: none;
+    user-select: none;
+    z-index: 9999999998
+}
+
+[data-theme=dark] .sitemap-mobile__backdrop {
+    background: rgba(0,0,0,.85)
+}
+
+.sitemap-mobile__padder {
+    padding: 1rem
+}
+
+@media only screen and (min-width: 23em) {
+    .sitemap-mobile__padder {
+        padding:1.5rem
+    }
+}
+
+@media only screen and (min-width: 25.8em) {
+    .sitemap-mobile__padder {
+        padding:1.6rem
+    }
+}
+
+@media only screen and (min-width: 35.5em) {
+    .sitemap-mobile__padder {
+        padding:1.7rem
+    }
+}
+
+.sitemap-mobile {
+    display: flex;
+    flex: 1 1;
+    flex-direction: column;
+    font-size: 1.1rem;
+    min-height: 100%;
+    width: 100%
+}
+
+.sitemap-mobile__wrapper {
+    background: var(--colors-themed-header-bg);
+    bottom: 0;
+    box-shadow: 2px 0 20px 0 rgba(0,0,0,.15);
+    color: var(--colors-themed-popup-color);
+    display: flex;
+    left: 0;
+    max-height: 100vh;
+    max-width: 300px;
+    position: fixed;
+    top: 0;
+    touch-action: none;
+    touch-action: pan-y;
+    width: 100vw;
+    z-index: 9999999999
+}
+
+.sitemap-mobile__wrapper--rtl {
+    left: auto;
+    right: 0
+}
+
+@supports (height: 100dvh) {
+    .sitemap-mobile__wrapper {
+        max-height:100dvh
+    }
+}
+
+.sitemap-desktop__view {
+    flex: 1 1;
+    min-width: 0;
+    padding: 0 0 2rem 2rem
+}
+
+[data-theme=dark] .sitemap-desktop__view {
+    border-color: #1d1d1d
+}
+
+.sitemap-desktop__view-title {
+    font-size: 1.4rem;
+    font-weight: 500;
+    margin-bottom: 2rem
+}
+
+.sitemap-desktop__view a {
+    color: inherit
+}
+
+@media only screen and (min-width: 120em) {
+    .sitemap-desktop__view-title {
+        font-size:1.42rem
+    }
+}
+
+.sitemap-desktop__item {
+    align-items: center;
+    border-radius: 2px;
+    color: inherit!important;
+    cursor: pointer;
+    display: flex;
+    min-width: 15rem;
+    padding: .7rem 1rem;
+    transition: all .15s ease-in-out;
+    white-space: nowrap
+}
+
+.sitemap-desktop__item:hover {
+    color: inherit;
+    text-decoration: none!important
+}
+
+.sitemap-desktop__item--selected {
+    background-color: #edf1f2
+}
+
+[data-theme=dark] .sitemap-desktop__item--selected {
+    background: var(--colors-themed-card-bg)
+}
+
+.sitemap-desktop__item--separator {
+    border-radius: 0!important
+}
+
+.sitemap-desktop__item--external:hover {
+    color: var(--colors-themed-anchor)!important
+}
+
+.icon.sitemap-desktop__item-arrow {
+    height: 10px;
+    opacity: .4;
+    width: 10px;
+    fill: none;
+    stroke: currentColor;
+    stroke-width: 2px;
+    margin-left: auto;
+    transform: rotateY(180deg)
+}
+
+.sitemap-desktop__item-icon {
+    height: 22px;
+    width: 22px;
+    stroke-width: 1.25px;
+    margin-right: 1rem
+}
+
+.sitemap-desktop__sidebar {
+    flex: none;
+    padding-right: 1rem
+}
+
 .sitemap-desktop__view--deals {
     display: grid;
     gap: 1.5rem
